removendo getFirst